mempelajari tentang selection yaitu querySelector() dan querySelectorAll() untuk menyeleksi elemen pada HTML

--- a/dom-selection.html
+++ b/dom-selection.html
@@ -19,6 +19,8 @@
       font-family: sans-serif;
       color: #333;
     }
+    /* #b p { color : green; } css tolong seleksi elemen paragraf pada yang berada dalam elemen dengan id b dan berikan warna hijau pada elemen paragraf tersebut */
+    /* section#b ul li:nth-child(2) { background-color: orange; } css tolong carikan saya elemen list li yang dia merupakan anak ke dua (dengan menggunakan bantuan pseudo yaitu nth-child) yang ada di dalam ul yang ada di dalam section yang punya id b lalu berikan warna backgroung orange */
   </style>
 </head>
 <body>
@@ -41,6 +43,6 @@
       </section>
   </div>
 
-<script src="dom-selection.js"></script>
+<script src="dom-selection-cont.js"></script>
 </body>
 </html>
