--- a/dom-manipulation.html
+++ b/dom-manipulation.html
@@ -43,6 +43,6 @@
       </section>
   </div>
 
-<script src="dom-manipulation.js"></script>
+<script src="dom-manipulation-cont.js"></script>
 </body>
 </html>
